carina-cli/tests/fixtures/negative/invalid_cidr_prefix.crn
# Negative test: CIDR with out-of-range prefix length
# Expected: validation error for prefix > 32

provider awscc {
  region = awscc.Region.ap_northeast_1
}

awscc.ec2.vpc {
  cidr_block = '10.0.0.0/33'
}
